# GameOfLife

./: CMakeLists.txt  main.cc
cmake/: FetchFTXUI.cmake
components/: SaveSlot.cc  SaveSlot.h
helpers/: ButtonHelper.cc  ButtonHelper.h  ColorHelper.h
types/: CellOperation.h  CellRenderer.cc  CellRenderer.h  FieldManager.cc  FieldManager.h  FieldSave.cc  FieldSave.h  GameOfLife.cc  GameOfLife.h  common.h
utils/: component.cc  component.h  console.cc  console.h
